[gd_scene load_steps=11 format=2]

[ext_resource path="res://images/glowing_circle.png" type="Texture" id=1]
[ext_resource path="res://code/RayCast2D.gd" type="Script" id=2]
[ext_resource path="res://resources/laser.tres" type="Environment" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.0075188, 0.37218, 0.864662 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.44586, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.984076, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 120.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.7
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 250.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.7
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 50.0

[node name="laser" type="RayCast2D"]
position = Vector2( 3.18988, -15.9493 )
cast_to = Vector2( 1000, 0 )
collision_mask = 27
script = ExtResource( 2 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 533.358, 3.12161 )
default_color = Color( 0.5, 3, 6, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="casting particles" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
process_material = SubResource( 5 )
texture = ExtResource( 1 )

[node name="collisionParticles" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
process_material = SubResource( 6 )
texture = ExtResource( 1 )

[node name="beamParticles" type="Particles2D" parent="."]
emitting = false
lifetime = 0.8
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
